<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Banner_K30PTKQ_Control" Id="{716893ae-1d39-4a4e-a2f7-bdf63d9d6de4}">
    <Declaration><![CDATA[(*
	This structure contains all the inputs of the BANNER LED.
	The inputs and the outputs are linked to the device as well.
*)

TYPE ST_Banner_K30PTKQ_Control :
	STRUCT
	Color1					: UINT; (* 0 = Green, 1 = Red, 2 = Orange, 3 = Amber, 4 = Yellow,
									5 = Lime Green, 6 = Spring Green, 7 = Cyan, 8 = Sky Blue,
									9 = Blue, 10 = Violet, 11 = Magenta, 12 = Rose, 13 = White,
									14 = Custom1, 15 = Custom2 *)
	Color2					: UINT; (* 0 = Green, 1 = Red, 2 = Orange, 3 = Amber, 4 = Yellow,
									5 = Lime Green, 6 = Spring Green, 7 = Cyan, 8 = Sky Blue,
									9 = Blue, 10 = Violet, 11 = Magenta, 12 = Rose, 13 = White,
									14 = Custom1, 15 = Custom2 *)
	Color1Intensity			: UINT; (* 0 = High, 1 = Medium, 2 = Low, 3 = Off, 4 = Custom *)
	Color2Intensity			: UINT; (* 0 = High, 1 = Medium, 2 = Low, 3 = Off, 4 = Custom *)
	SequenceStartLocation	: UINT; (* 0 = LED1, 1 = LED2, 2 = LED3, 3 = LED4 *)
	DynamicSequenceValue	: UINT; (* 0-255 *)
	AnimationSpeed			: UINT; (* 0 = Slow, 1 = Medium, 2 = Fast, 3 = Custom *)
	Reserved				: UINT; (* Reserved *)
	AnimationType			: UINT; (* 0 = Off, 1 = Steady, 2 = Flash, 3 = Two Color Flash,
									   4 = 50/50, 5 = 50/50 Rotate, 6 = Chase, 7 = Intensity Sweep,
									   8 = Color Sweep, 9 = Sequence, 10 = Wave, 11 = Double Wave *)
	AnimationDirection		: UINT; (* 0 = CCW, 1 = CW *)
	AnimationPattern		: UINT; (* 0 = Flash, 1 = Strobe, 2 = Three Pulse, 3 = SOS, 4 = Random *)
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>